[gd_scene load_steps=7 format=3 uid="uid://bsx1usq366uih"]

[ext_resource type="Script" uid="uid://dcdowglvd2oyi" path="res://src/ui/in_game_ui.gd" id="1_6al0f"]
[ext_resource type="Texture2D" uid="uid://ogyonerhuxqq" path="res://assets/crosshair.png" id="3_73s3q"]
[ext_resource type="Texture2D" uid="uid://5kxw7b5ombpr" path="res://assets/toolbar.png" id="3_gtd8h"]
[ext_resource type="Script" uid="uid://lblaiw3aanud" path="res://src/ui/options_menu.gd" id="4_8cb5d"]
[ext_resource type="Texture2D" uid="uid://vocvmjj7kt4g" path="res://assets/toolbar_selection.png" id="4_37e62"]
[ext_resource type="Script" uid="uid://cnld5vsyaf5i6" path="res://src/ui/style/appliers/button_group.gd" id="6_3i5ob"]

[node name="InGameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6al0f")

[node name="UnpausedHUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="TextureRect" parent="UnpausedHUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_73s3q")

[node name="FixedHUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Toolbar" type="TextureRect" parent="FixedHUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -364.0
offset_top = -88.0
offset_right = 364.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_gtd8h")

[node name="ToolbarSelectionSquare" type="TextureRect" parent="FixedHUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -88.0
offset_right = 44.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_37e62")

[node name="OptionsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_8cb5d")

[node name="BackgroundColor" type="ColorRect" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.529412)

[node name="Buttons" type="HFlowContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -33.0
offset_right = 71.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_3i5ob")

[node name="ResumeButton" type="Button" parent="OptionsMenu/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resume"

[node name="QuitButton" type="Button" parent="OptionsMenu/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[connection signal="pressed" from="OptionsMenu/Buttons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="OptionsMenu/Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
